fixed the overflow issue

--- a/css/header.css
+++ b/css/header.css
@@ -8,7 +8,7 @@ header {
     top: 0px;
     font-size: 32px;
     background-color: #E35046;
-    box-shadow: 0px 0px 3px #000000;
+    /* box-shadow: 0px 0px 2px #000000; */
 }
 
 header #logo{
